--- a/src/pages/Home/Banner/Banner.css
+++ b/src/pages/Home/Banner/Banner.css
@@ -9,6 +9,7 @@
 
 .banner-description{
     color: white;
+    margin: 40px 60px;
 }
 
 .banner-large-text h1{
@@ -19,7 +20,10 @@
 .banner-large-text span{
     color: #e91a2fe8;
 }
-
+.banner-text{
+    display: flex;
+    flex-direction: row;
+}
 .banner-button{
     background-color: #e91a2fe8;
     color: white;
@@ -28,4 +32,19 @@
     border-radius: 30px;
     font-size: 18px;
     font-weight: 400;
+}
+
+@media only screen and (max-width:668px){
+    .banner{
+        height: 110vh;
+    }
+    .banner-description{
+        margin: 50px 20px;
+    }
+    .banner-large-text h1{
+        font-size: 50px;
+    }
+    .banner-text{
+        flex-direction: column;
+    }
 }
