--- a/src/shared/Header/Header.css
+++ b/src/shared/Header/Header.css
@@ -1,4 +1,9 @@
 
+.logo img{
+    height: 50px;
+    width: 60px;
+    border-radius: 5px;
+}
 .link-color{
     color: rgb(245, 245, 245);
     font-size: 20px;
@@ -6,5 +11,23 @@
 }
 .link-color:hover{
     color: #e91a2fe8;
-    border-bottom: 2px solid #e91a2fe8;
+}
+.dashboard a:hover{
+    color: #e91a2fe8;
+}
+.dashboard a{
+    margin-right: 50px;
+    color: rgb(245, 245, 245);
+    font-size: 20px;
+    font-weight: 600;
+    text-decoration: none;
+}
+.login a{
+    text-decoration: none;
+    color: white;
+    background: #e91a2fe8;
+    padding: 10px 20px;
+    font-size: 20px;
+    font-weight: 400;
+    border-radius: 10px;
 }
