--- a/src/shared/Header/Header.css
+++ b/src/shared/Header/Header.css
@@ -5,19 +5,19 @@
     border-radius: 5px;
 }
 .link-color{
-    color: rgb(245, 245, 245);
+    color: #b30303;
     font-size: 20px;
     font-weight: 600;
 }
 .link-color:hover{
-    color: #e91a2fe8;
+    color: #7c0511e8;
 }
 .dashboard a:hover{
-    color: #e91a2fe8;
+    color: #7c0511e8;
 }
 .dashboard a{
     margin-right: 50px;
-    color: rgb(245, 245, 245);
+    color: #b30303;
     font-size: 20px;
     font-weight: 600;
     text-decoration: none;
@@ -26,8 +26,8 @@
     text-decoration: none;
     color: white;
     background: #e91a2fe8;
-    padding: 10px 20px;
+    padding: 15px 30px;
     font-size: 20px;
     font-weight: 400;
-    border-radius: 10px;
+    border-radius: 30px;
 }
