auth-basic-done

--- a/src/shared/Header/Header.css
+++ b/src/shared/Header/Header.css
@@ -15,7 +15,7 @@
 .dashboard a:hover{
     color: #7c0511e8;
 }
-.dashboard a{
+.dashboard a,span{
     margin-right: 50px;
     color: #b30303;
     font-size: 20px;
@@ -30,4 +30,14 @@
     font-size: 20px;
     font-weight: 400;
     border-radius: 30px;
+}
+.logout-btn{
+    text-decoration: none;
+    color: white;
+    background: #e91a2fe8;
+    padding: 10px 30px;
+    font-size: 20px;
+    font-weight: 400;
+    border-radius: 30px;
+    border: none;
 }
