--- a/src/pages/Signin/Signin.css
+++ b/src/pages/Signin/Signin.css
@@ -1,3 +1,10 @@
+.signin-main{
+    background: linear-gradient(rgba(37, 36, 36, 0.418), rgba(0, 0, 0, 0.418)), url("../../images/login.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center center;
+    height: 50vh;
+}
 
 .card {
     border: none;
