--- a/src/shared/Header/Header.css
+++ b/src/shared/Header/Header.css
@@ -23,21 +23,15 @@
     font-weight: 600;
     text-decoration: none;
 }
+
 .login a{
     text-decoration: none;
+    background-color: #e91a2fe8;
     color: white;
-    background: #e91a2fe8;
-    padding: 15px 30px;
-    font-size: 20px;
-    font-weight: 400;
-    border-radius: 30px;
-}
-.logout-btn{
-    color: white;
-    background: #e91a2fe8;
-    padding: 12px 30px;
-    font-size: 20px;
-    font-weight: 400;
-    border-radius: 30px;
     border: none;
+    padding: 15px 50px;
+    border-radius: 30px;
+    font-size: 18px;
+    width: 170px;
+    font-weight: 400;
 }
